--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-component":"node cli/index.js"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.0",
